# pyramus

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  quality.yml  tests.yml
pyramus/: Cargo.toml
pyramus-gui/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  index.html  package-lock.json  package.json  shims-svg.d.ts  shims-tsx.d.ts  tsconfig.json  vite.config.js
pyramus-gui/src/: App.vue  main.js  main.ts  routes.js  routes.ts
pyramus-gui/src/assets/icons/: index.ts
pyramus-gui/src/assets/stylesheets/: classes.scss  global.scss  variables.scss
pyramus-gui/src/components/ui/: Breadcrumbs.vue  Button.vue  ItemCreatorModal.vue  ItemEditor.vue  ItemWindow.vue  Modal.vue  RowDisplay.vue  SplashScreen.vue  StageSaveModal.vue  TreeSelector.vue
pyramus-gui/src/helpers/: editor.ts  fetch.js  fetch.ts  input.ts  messages.ts  state.ts  test.ts  uploadImage.ts
pyramus-gui/src/pages/: Editor.vue  EditorRaw.vue  EditorSvg.vue  Index.vue  index.js  index.ts
pyramus-gui/src/store/: breadcrumbs.ts  state.ts  theme.ts
pyramus-gui/wasm/: Cargo.toml
pyramus-gui/wasm/src/: create_image.rs  editor.rs  image.rs  input.rs  item.rs  lib.rs  log.rs  models.rs  new_editor.rs  render.rs
pyramus/src/: cache.rs  command.rs  item.rs  lib.rs  log.rs  logging.rs  models.rs  render.rs  svg.rs
pyramus/src/command/: backend.rs  frontend.rs  mod.rs
pyramus/src/input/: mod.rs
pyramus/src/models/: item.rs  mod.rs  stage.rs
pyramus/src/models/blueprint/: mod.rs  prop.rs  prop_builder.rs  transform.rs
pyramus/src/models/editor/: base_item.rs  item.rs  mod.rs  stage.rs  staged_template.rs  staging.rs  usvg_node.rs
pyramus/src/models/templates/: blueprint.rs  ids.rs  mod.rs  prop.rs  prop_builder.rs  prop_item.rs  transform.rs
pyramus/src/models/templates/builder/: mod.rs  prop_builder.rs  prop_item_builder.rs
res/: 1n.json
