[workspace]
members = [
	"pyramus",
	"pyramus-gui/wasm",
]

[workspace.dependencies]
wasm-bindgen = "=0.2.87"
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["rustls", "rustls-tls", "json"] }
futures = "0.3"
tempfile = "3"
thiserror = "1.0"
axum = "0.6"
chrono = "^0.4.23"
wasm-bindgen-futures = { version = "0.4.36" }
url = "2.4.0"
tokio = { version = "1.29", features = ["fs", "io-std"] }
rand = { version = "0.8.5", default-features = false }
glam = { version = "0.24", default-features = false, features = ["serde"] }
image = { version = "0.24", default-features = false, features = ["png"] }
js-sys = { version = "0.3.55" }
web-sys = { version = "0.3.55" }

[profile.dev]
opt-level = 1
