[workspace]
members = ["pyramus", "pyramus-gui/wasm"]

[workspace.dependencies]
# TODO: Remove unnecessary dependencies and features
wasm-bindgen = "=0.2.87"
console_error_panic_hook = "0.1.7"
async-trait = { version = "0.1" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["rustls", "rustls-tls", "json"] }
futures = "0.3"
tempfile = "3"
thiserror = "1.0.56"
axum = "0.6"
chrono = "^0.4.23"
wasm-bindgen-futures = { version = "0.4.36" }
url = "2.4.0"
tokio = { version = "1.29", features = [] }
rand = { version = "0.8.5", default-features = false }
glam = { version = "0.24", default-features = false, features = ["serde"] }
image = { version = "0.24.9", default-features = false, features = [
    "png",
    "jpeg",
] }
js-sys = { version = "0.3.55" }
web-sys = { version = "0.3.55", features = [
    "Window",
    "CanvasRenderingContext2d",
    "ImageData",
    "Document",
    "Navigator",
    "Gpu",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "ImageBitmapRenderingContext",
] }
tsify = { version = "0.4.5" }
resvg = { version = "0.39.0" }
svgtypes = "0.14.0" # For fonts in resvg
strum = "0.26.1"
strum_macros = "0.26.1"
base62 = "2.0.2"
[profile.dev]
opt-level = 1
