[package]
name = "pyramus"
version = "0.0.1"
description = "Pyramus API"
authors = ["Wyatt Verchere <wverchere@gmail.com>"]
repository = ""
edition = "2021"


[dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
futures = { workspace = true }
resvg = { workspace = true }
svgtypes = { workspace = true }
thiserror = { workspace = true }
js-sys = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
base62 = { workspace = true }

# TODO: Remove these dependencies (and any other unnecessary ones) 
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true}
