[package]
name = "pyramus-wasm"
version = "0.0.1"
description = "Pyramus WASM Hooks"
authors = ["Wyatt Verchere <wverchere@gmail.com>"]
repository = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyramus = { path = "../../pyramus" }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { version = "0.1.6" }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = { workspace = true }
resvg = { workspace = true }
web-sys = { workspace = true }
tsify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }
